[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flux-prototype"
version = "0.1.0"
description = "Research prototype for Flux holographic-state + lossless tape model"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
